# UAVtoController

./: CMakeLists.txt  README.md  build-win.cmd  build.sh  test.txt
libs/SerialPortTool/: CMakeLists.txt  README.md  build-win.cmd  build.sh
libs/SerialPortTool/src/: main.cpp
libs/inih/: build.sh  config.ini  main.cpp
libs/mavlink/ASLUAV/: ASLUAV.h  ASLUAV.hpp  gtestsuite.hpp  mavlink.h  mavlink_msg_asl_obctrl.hpp  mavlink_msg_aslctrl_data.hpp  mavlink_msg_aslctrl_debug.hpp  mavlink_msg_asluav_status.hpp  mavlink_msg_command_int_stamped.hpp  mavlink_msg_command_long_stamped.hpp  mavlink_msg_ekf_ext.hpp  mavlink_msg_fw_soaring_data.hpp  mavlink_msg_gsm_link_status.hpp  mavlink_msg_satcom_link_status.hpp  mavlink_msg_sens_atmos.hpp  mavlink_msg_sens_batmon.hpp  mavlink_msg_sens_mppt.hpp  mavlink_msg_sens_power.hpp  mavlink_msg_sens_power_board.hpp  mavlink_msg_sensor_airflow_angles.hpp  mavlink_msg_sensorpod_status.hpp  version.h
libs/mavlink/AVSSUAS/: AVSSUAS.h  AVSSUAS.hpp  gtestsuite.hpp  mavlink.h  mavlink_msg_avss_drone_imu.h  mavlink_msg_avss_drone_imu.hpp  mavlink_msg_avss_drone_operation_mode.h  mavlink_msg_avss_drone_operation_mode.hpp  mavlink_msg_avss_drone_position.h  mavlink_msg_avss_drone_position.hpp  mavlink_msg_avss_prs_sys_status.h  mavlink_msg_avss_prs_sys_status.hpp  version.h
libs/mavlink/all/: all.h  all.hpp  gtestsuite.hpp  mavlink.h  version.h
libs/mavlink/ardupilotmega/: ardupilotmega.h  ardupilotmega.hpp  gtestsuite.hpp  mavlink.h  testsuite.h  version.h
libs/mavlink/common/: common.h  common.hpp  gtestsuite.hpp  mavlink.h  mavlink_msg_battery_info.h  mavlink_msg_battery_info.hpp  mavlink_msg_battery_status.hpp  mavlink_msg_flight_information.h  mavlink_msg_flight_information.hpp  version.h
libs/mavlink/csAirLink/: csAirLink.h  csAirLink.hpp  gtestsuite.hpp  mavlink.h  mavlink_msg_airlink_eye_gs_hole_push_request.h  mavlink_msg_airlink_eye_gs_hole_push_request.hpp  mavlink_msg_airlink_eye_gs_hole_push_response.h  mavlink_msg_airlink_eye_gs_hole_push_response.hpp  mavlink_msg_airlink_eye_hp.h  mavlink_msg_airlink_eye_hp.hpp  mavlink_msg_airlink_eye_turn_init.h  mavlink_msg_airlink_eye_turn_init.hpp  testsuite.h  version.h
libs/mavlink/cubepilot/: cubepilot.h  cubepilot.hpp  mavlink.h  version.h
libs/mavlink/development/: development.h  development.hpp  gtestsuite.hpp  mavlink.h  mavlink_msg_airspeed.h  mavlink_msg_airspeed.hpp  mavlink_msg_available_modes.h  mavlink_msg_available_modes.hpp  mavlink_msg_available_modes_monitor.h  mavlink_msg_available_modes_monitor.hpp  mavlink_msg_battery_status_v2.h  mavlink_msg_battery_status_v2.hpp  mavlink_msg_component_information_basic.h  mavlink_msg_component_information_basic.hpp  mavlink_msg_current_mode.h  mavlink_msg_current_mode.hpp  mavlink_msg_figure_eight_execution_status.hpp  mavlink_msg_group_end.hpp  mavlink_msg_group_start.hpp  mavlink_msg_param_ack_transaction.hpp  mavlink_msg_set_velocity_limits.h  mavlink_msg_set_velocity_limits.hpp  mavlink_msg_target_absolute.h  mavlink_msg_target_absolute.hpp  mavlink_msg_target_relative.h  mavlink_msg_target_relative.hpp  mavlink_msg_velocity_limits.h  mavlink_msg_velocity_limits.hpp  mavlink_msg_wifi_network_info.hpp  testsuite.h  version.h
libs/mavlink/icarous/: icarous.h  mavlink.h  version.h
libs/mavlink/minimal/: mavlink.h  minimal.h  minimal.hpp  version.h
libs/mavlink/python_array_test/: gtestsuite.hpp  mavlink.h  mavlink_msg_array_test_0.h  mavlink_msg_array_test_0.hpp  mavlink_msg_array_test_1.h  mavlink_msg_array_test_1.hpp  mavlink_msg_array_test_3.h  mavlink_msg_array_test_3.hpp  mavlink_msg_array_test_4.h  (+12 more)
src/: Application.cpp  Application.hpp  Logger.cpp  Logger.hpp  main.cpp
src/Comm/: LinkInterface.hpp  SerialLink.cpp  SerialLink.hpp  UDPLink.cpp  UDPLink.hpp
src/Protocol/: CtrlCenter.cpp  CtrlCenter.hpp  ProtocolCtrlCenter.cpp  ProtocolCtrlCenter.hpp  ProtocolInterface.hpp  ProtocolMavlink.cpp  ProtocolMavlink.hpp  ProtocolMavlinkFlightMode.cpp  ProtocolMavlinkFlightMode.hpp
tests/: uavToController.ini
(+50 files in other folders)
